--- a/client/src/style/Navbar.css
+++ b/client/src/style/Navbar.css
@@ -1,32 +1,32 @@
-/* Navbar.css */
 .unClickedButton,
 .clickedButton {
-  /* Ensure higher specificity */
-  color: #fff; /* Change text color to white for better visibility */
+  color: #fff; 
   font-size: x-small;
 }
 
 .unClickedButton {
   transition: none;
-  background-color: #1db954 !important; /* Override Bootstrap styles */
+  background-color: #1db954 !important;
   margin: 0 !important;
 }
 
 .clickedButton {
   transition: none;
-  background-color: #181818 !important; /* Override Bootstrap styles */
+  background-color: #181818 !important;
   margin: 0 !important;
   border-top-left-radius: 10% !important;
   border-top-right-radius: 10% !important;
 }
 
 .nav {
+  display: flex;
   background-color: #1db954 !important;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
+  padding-left: 10%;
+  padding-top: 1%;
 }
 
-/* Background.css or another global CSS file */
 html,
 body {
   margin: 0;
